# Beacon

./: .gitignore  Cargo.toml  README.md  setup.sh
.cargo/: config.toml
pinterest/: bot.php  composer.json
src/: main.rs
src/plataforms/: deviant.rs  mod.rs  pinterest.rs
src/scanner/: Results.rs  mod.rs
