[package]
name = "beacon"
version = "0.1.0"
edition = "2024"

[dependencies]
deviantart = { git = "https://github.com/adumbidiot/deviantart-rs.git", version = "0.0.0" }
dotenv = "0.15.0"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"]}
url = "2.5.8"
